java: modernize immutable collection construction